MAJOR CHANGE rewriting chemstation parsing as more reliant on rainbow, using duckdb to store the data persistantly. The intention is to speed up computation time, which was too slow with the old approach. Also starting to use polars over pandas.
Adds uv_database.db to gitignore.


Former-commit-id: fe544da156bd6603a2ddd5cc9663dae656455173
Former-commit-id: 0f3cce4117d58162b05429cb0f33d8764a45766d

--- a/.gitignore
+++ b/.gitignore
@@ -170,3 +170,4 @@ notebooks/.DS_Store
 .DS_Store
 prototype_code/testing_loading_subset_spectra.py
 agilette/modules/agilette_library.csv
+uv_database.db
