ADD get_spectrums method which fetches spectrums based on a hash_key in the metadata table.
Former-commit-id: deb5ec88f74aa3ac8b78fc5d388e5c64319f43a9
Former-commit-id: 42dff4a465853b30e8d09378473a779a1139798a

--- a/.gitignore
+++ b/.gitignore
@@ -171,3 +171,5 @@ notebooks/.DS_Store
 prototype_code/testing_loading_subset_spectra.py
 agilette/modules/agilette_library.csv
 uv_database.db
+prototype_code/wine_auth_db.db
+prototype_code/wine_auth_db.db.wal
