--- a/.gitignore
+++ b/.gitignore
@@ -173,3 +173,5 @@ agilette/modules/agilette_library.csv
 uv_database.db
 prototype_code/wine_auth_db.db
 prototype_code/wine_auth_db.db.wal
+wine_auth_db.db
+.gitignore
