moved homepage to ~/notes/
Former-commit-id: dcc082b4f42f72c53b4d0c0b859780922988755e
Former-commit-id: b39f95aea5c4f16e8a30452d0345a8ca61bdf95d

--- a/.gitignore
+++ b/.gitignore
@@ -177,3 +177,5 @@ wine_auth_db.db
 .gitignore
 .DS_Store
 prototype_code/signal_alignment_methods.py
+unique_new_id_spectra.pk1
+notes/homepage_paper-data-processing-for-chemometrics.md
