Super dump commit, fixed a ton of stuff to modularize chemstation table creation. Not gna bother explaining. Adds type testing, pickling, user input before overwriting pickle and before overwriting db table.
Former-commit-id: c8a02b5c2cd0f5036cac83dea2eabc3553f03d07
Former-commit-id: d51aa95ad2bd7495ba11e9e57e47459021dfd87b
Former-commit-id: 049914ef9f5d5af54fafe25766471565cb668a89

--- a/.gitignore
+++ b/.gitignore
@@ -179,3 +179,5 @@ wine_auth_db.db
 prototype_code/signal_alignment_methods.py
 unique_new_id_spectra.pk1
 notes/homepage_paper-data-processing-for-chemometrics.md
+chemstation/chemstation_data_dicts_tuple.pk
+scripts/reagent_calculator.py
