updating .gitignore to ignore .pk, .idea, .vscode
Former-commit-id: 851dfd492b303f9397f686bf6ff5dbbf9e56f997

--- a/.gitignore
+++ b/.gitignore
@@ -181,3 +181,10 @@ unique_new_id_spectra.pk1
 notes/homepage_paper-data-processing-for-chemometrics.md
 chemstation/chemstation_data_dicts_tuple.pk
 scripts/reagent_calculator.py
+*.db
+*.pk
+*.vscode
+.idea
+.idea
+*.vscode
+*.pk
