--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,3 @@
-[metadata]
-name = wine_analysis_hplc_uv
-version = 0.0.1
-author = Jonathan George Harold Stathakis
-author_email = j.stathakis@live.com.au
-description = A package template
-long_description = file: README.md
-long_description_content_type = text/markdown
-url = https://github.com/alod83/package_template
-project_urls =
-bug tracker = https://github.com/alod83/package_template/issues
-classifiers =
-programming language :: Python :: 3
-license :: OSI Approved :: MIT License
-operating system :: OS Independent
-[options]
-package_dir = 
-    = src
-packages = find:
-python_requires = >=3.6
-
-setup_requires =
 altair==4.2.2
 attrs==23.1.0
 beautifulsoup4==4.12.2
@@ -62,6 +40,7 @@ markdown-it-py==2.2.0
 MarkupSafe==2.1.2
 matplotlib==3.7.1
 mdurl==0.1.2
+-e git+https://github.com/jonathanstathakis/mydfmethods@369f8c3f5e67e674fd3f847af5aa1f2c8def97d2#egg=mydfmethods
 numpy==1.24.3
 oauthlib==3.2.2
 packaging==23.1
@@ -81,6 +60,8 @@ Pympler==1.0.1
 pyparsing==3.0.9
 pyproject_hooks==1.0.0
 pyrsistent==0.19.3
+# Editable install with no version control (pytest==7.4.0.dev73+g9e491f430)
+-e /Users/jonathan/mycode/test/pytest
 python-dateutil==2.8.2
 python-Levenshtein==0.21.0
 python-lzf==0.2.4
@@ -97,6 +78,7 @@ smmap==5.0.0
 soupsieve==2.4.1
 streamlit==1.22.0
 tenacity==8.2.2
+testpackage @ file:///Users/jonathan/mycode/test_cookiecutter/testpackage
 toml==0.10.2
 toolz==0.12.0
 tornado==6.3.2
@@ -108,9 +90,3 @@ urllib3==1.26.16
 validators==0.20.0
 yarg==0.1.9
 zipp==3.15.0
-
-
-
-
-[options.packages.find]
-where = src
