--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,89 @@
+[project]
+
+name = "wine_analysis_hplc_uv"
+
+version = "0.0.1"
+
+description = "my super duper thesis package"
+
+readme = "README.md"
+
+requires-python = ">=3.11.0"
+
+keywords = ['chromatography', 'multiway methods', 'data analysis']
+
+authors = [{name = "Jonathan George Harold Stathakis"}]
+
+classifiers = ["Development Status :: 3 - Alpha"]
+
+dependencies = [
+"altair==4.2.2",
+"attrs==23.1.0",
+"beautifulsoup4==4.12.2",
+"blinker==1.6.2",
+"build==0.10.0",
+"cachetools==5.3.0",
+"cellartracker==1.1.1",
+"certifi==2023.5.7",
+"charset-normalizer==3.1.0",
+"click==8.1.3",
+"colored-traceback==0.3.0",
+"contourpy==1.0.7",
+"cycler==0.11.0",
+"decorator==5.1.1",
+"docopt==0.6.2",
+"dtw==1.4.0",
+"duckdb==0.8.0",
+"entrypoints==0.4",
+"fonttools==4.39.4",
+"fuzzywuzzy==0.18.0",
+"gitdb==4.0.10",
+"GitPython==3.1.31",
+"google==3.0.0",
+"google-api-core==2.11.0",
+"google-api-python-client==2.87.0",
+"google-auth==2.18.1",
+"google-auth-httplib2==0.1.0",
+"google-auth-oauthlib==1.0.0",
+"googleapis-common-protos==1.59.0",
+"httplib2==0.22.0",
+"idna==3.4",
+"importlib-metadata==6.6.0",
+"iniconfig==2.0.0",
+"Jinja2==3.1.2",
+"jsonschema==4.17.3",
+"kiwisolver==1.4.4",
+"Levenshtein==0.21.0",
+"lxml==4.9.2",
+"markdown-it-py==2.2.0",
+"MarkupSafe==2.1.2",
+"matplotlib==3.7.1",
+"mdurl==0.1.2",
+"numpy==1.24.3",
+"oauthlib==3.2.2",
+"packaging==23.1",
+"pandas==2.0.1",
+"Pillow==9.5.0",
+"pipreqs==0.4.13",
+"plotly==5.14.1",
+"pluggy==1.0.0",
+"protobuf==3.20.3",
+"pyarrow==12.0.0",
+"pyasn1==0.5.0",
+"pyasn1-modules==0.3.0",
+"pybaselines==1.0.0",
+"pydeck==0.8.1b0",
+"Pygments==2.15.1",
+"Pympler==1.0.1",
+"pyparsing==3.0.9",
+"pyproject_hooks==1.0.0",
+"pyrsistent==0.19.3",
+"python-dateutil==2.8.2",
+"python-Levenshtein==0.21.0",
+"python-lzf==0.2.4",
+"pytz==2023.3",
+]
+
 [build-system]
 requires = [
    "setuptools",
