--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,10 +1,9 @@
 repos:
 -   repo: https://github.com/psf/black
-    rev: stable
+    rev: 23.3.0
     hooks:
     - id: black
-      language_version: python3.7
--   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v1.2.3
+-   repo: https://github.com/PyCQA/flake8 
+    rev: 6.0.0
     hooks:
     - id: flake8
