--- a/pyproject.toml
+++ b/pyproject.toml
@@ -98,6 +98,7 @@ yarg = "0.1.9"
 zipp = "3.15.0"
 mydevtools = {git = "https://github.com/jonathanstathakis/mydevtools.git"}
 pre-commit = "^3.3.2"
+gspread = "^5.9.0"
 
 [build-system]
 requires = ["poetry-core"]
