test data git ignore add
Former-commit-id: ab54322a926c7dce5faf86ffcd688d0fccdb713c
Former-commit-id: efe978b313c312eed8a4a380f057b6ad2bdd122c

--- a/.gitignore
+++ b/.gitignore
@@ -174,3 +174,15 @@ data/*
 build/*
 *.egg-info/
 bin/*
+tests/test_data/125.D/acq.macaml
+tests/test_data/125.D/acq.txt
+tests/test_data/125.D/ACQRES.REG
+tests/test_data/125.D/CSlbk.ini
+tests/test_data/125.D/DAD1.UV
+tests/test_data/125.D/DAD1A.ch
+tests/test_data/125.D/DAD1B.ch
+tests/test_data/125.D/LCDIAG.REG
+tests/test_data/125.D/Limsinf.xml
+tests/test_data/125.D/SAMPLE.XML
+tests/test_data/125.D/SAMPLE.XML.bak
+tests/test_data/125.D/sequence.acam_
