--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = ""
 authors = ["OctaneOolong <62565951+OctaneOolong@users.noreply.github.com>"]
 readme = "README.md"
-packages = [{include = "wine_analysis_hplc_uv"}]
+packages = [{include = "src/wine_analysis_hplc_uv"}]
 
 [tool.poetry.dependencies]
 python = ">=3.11,<3.12"
@@ -38,7 +38,7 @@ google-auth = "2.18.1"
 google-auth-httplib2 = "0.1.0"
 google-auth-oauthlib = "1.0.0"
 googleapis-common-protos = "1.59.0"
-httplib2 = "0.22.0"
+httplib2 = "0.22.0" 
 idna = "3.4"
 importlib-metadata = "6.6.0"
 iniconfig = "2.0.0"
@@ -54,10 +54,9 @@ mdurl = "0.1.2"
 numpy = "1.24.3"
 oauthlib = "3.2.2"
 packaging = "23.1"
-pandas = "2.0.1"
+pandas = "2.0.2"
 pillow = "9.5.0"
 pipreqs = "0.4.13"
-plotly = "5.14.1"
 pluggy = "1.0.0"
 protobuf = "3.20.3"
 pyarrow = "12.0.0"
@@ -99,6 +98,7 @@ zipp = "3.15.0"
 mydevtools = {git = "https://github.com/jonathanstathakis/mydevtools.git"}
 pre-commit = "^3.3.2"
 gspread = "^5.9.0"
+plotly = "^5.15.0"
 
 [build-system]
 requires = ["poetry-core"]
