--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,6 @@ version = "0.1.0"
 description = ""
 authors = ["OctaneOolong <62565951+OctaneOolong@users.noreply.github.com>"]
 readme = "README.md"
-packages = [{include = "src/wine_analysis_hplc_uv"}]
 
 [tool.poetry.dependencies]
 python = ">=3.11,<3.12"
@@ -95,10 +94,10 @@ urllib3 = "1.26.16"
 validators = "0.20.0"
 yarg = "0.1.9"
 zipp = "3.15.0"
-mydevtools = {git = "https://github.com/jonathanstathakis/mydevtools.git"}
 pre-commit = "^3.3.2"
 gspread = "^5.9.0"
 plotly = "^5.15.0"
+mydevtools = {path = "/Users/jonathan/mycode/python_code/mydevtools", develop = true}
 
 [build-system]
 requires = ["poetry-core"]
