--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,7 +72,6 @@ python-dateutil = "2.8.2"
 python-levenshtein = "0.21.0"
 python-lzf = "0.2.4"
 pytz = "2023.3"
-rainbow-api = "1.0.2"
 rapidfuzz = "3.0.0"
 requests = "2.31.0"
 requests-oauthlib = "1.3.1"
@@ -94,11 +93,11 @@ urllib3 = "1.26.16"
 validators = "0.20.0"
 yarg = "0.1.9"
 zipp = "3.15.0"
-pre-commit = "^3.3.2"
 gspread = "^5.9.0"
 plotly = "^5.15.0"
 mydevtools = {path = "/Users/jonathan/mycode/python_code/mydevtools", develop = true}
-
+rainbow-api-fork = {git = "https://github.com/jonathanstathakis/rainbow.git"}
+pre-commit = "^3.3.3"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
