--- a/pyproject.toml
+++ b/pyproject.toml
@@ -100,6 +100,23 @@ pre-commit = "^3.3.3"
 rainbow-api-fork = {path = "/Users/jonathan/mycode/python_code/rainbow", develop = true}
 directory-tree = "^0.0.3.1"
 pytest = "^7.4.0"
+sqlalchemy = "^2.0.17"
+duckdb-engine = "^0.9.0"
+openpyxl = "^3.1.2"
+jupyter = "^1.0.0"
+seaborn = "^0.12.2"
+kaleido = "0.2.1"
+xhtml2pdf = "^0.2.11"
+pdf-reports = "^0.3.4"
+jupyter-contrib-nbextensions = "^0.7.0"
+pyppeteer = "^1.0.2"
+nbconvert = {extras = ["qtpdf"], version = "^7.6.0"}
+pyqt6 = "^6.5.1"
+tabulate = "^0.9.0"
+
+[tool.poetry.group.dev.dependencies]
+jupyter = "^1.0.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
