--- a/.gitignore
+++ b/.gitignore
@@ -187,3 +187,7 @@ tests/test_data/125.D/SAMPLE.XML
 tests/test_data/125.D/SAMPLE.XML.bak
 tests/test_data/125.D/sequence.acam_
 src/wine_analysis_hplc_uv/chemstation/1. chemstationprocessor
+src/wine_analysis_hplc_uv/library_eda/.jupyter/desktop-workspaces/default-37a8.jupyterlab-workspace
+/Users/jonathan/mres_thesis/wine_analysis_hplc_uv/src/wine_analysis_hplc_uv/library_eda/lib_eda/lib_eda_pub_organised_by_anal_not_detect_files/libs/bootstrap/*
+wine_analysis_hplc_uv_2.code-workspace
+src/wine_analysis_hplc_uv/library_eda/df.xlsx
