--- a/.gitignore
+++ b/.gitignore
@@ -191,3 +191,14 @@ src/wine_analysis_hplc_uv/library_eda/.jupyter/desktop-workspaces/default-37a8.j
 /Users/jonathan/mres_thesis/wine_analysis_hplc_uv/src/wine_analysis_hplc_uv/library_eda/lib_eda/lib_eda_pub_organised_by_anal_not_detect_files/libs/bootstrap/*
 wine_analysis_hplc_uv_2.code-workspace
 src/wine_analysis_hplc_uv/library_eda/df.xlsx
+src/wine_analysis_hplc_uv/library_eda/lib_eda/lib_eda_files/libs/bootstrap/bootstrap.min.js
+src/wine_analysis_hplc_uv/library_eda/lib_eda/lib_eda_files/libs/clipboard/clipboard.min.js
+src/wine_analysis_hplc_uv/library_eda/lib_eda/lib_eda_files/libs/quarto-html/anchor.min.js
+src/wine_analysis_hplc_uv/library_eda/lib_eda/lib_eda_files/libs/quarto-html/popper.min.js
+src/wine_analysis_hplc_uv/library_eda/lib_eda/lib_eda_files/libs/quarto-html/quarto-syntax-highlighting.css
+src/wine_analysis_hplc_uv/library_eda/lib_eda/lib_eda_files/libs/quarto-html/quarto.js
+src/wine_analysis_hplc_uv/library_eda/lib_eda/lib_eda_files/libs/quarto-html/tippy.css
+src/wine_analysis_hplc_uv/library_eda/lib_eda/lib_eda_files/libs/quarto-html/tippy.umd.min.js
+src/wine_analysis_hplc_uv/library_eda/lib_eda/lib_eda_files/libs/bootstrap/bootstrap-icons.woff
+src/wine_analysis_hplc_uv/library_eda/lib_eda/lib_eda_files/libs/bootstrap/bootstrap-icons.css
+src/wine_analysis_hplc_uv/library_eda/lib_eda/lib_eda_files/libs/bootstrap/bootstrap.min.css
