--- a/pyproject.toml
+++ b/pyproject.toml
@@ -96,7 +96,6 @@ zipp = "3.15.0"
 gspread = "^5.9.0"
 plotly = "^5.15.0"
 mydevtools = {path = "/Users/jonathan/mycode/python_code/mydevtools", develop = true}
-pre-commit = "^3.3.3"
 rainbow-api-fork = {path = "/Users/jonathan/mycode/python_code/rainbow", develop = true}
 directory-tree = "^0.0.3.1"
 pytest = "^7.4.0"
@@ -114,9 +113,13 @@ nbconvert = {extras = ["qtpdf"], version = "^7.6.0"}
 pyqt6 = "^6.5.1"
 tabulate = "^0.9.0"
 jupyterlab = "^4.0.3"
+pre-commit = "^3.3.3"
 
 [tool.poetry.group.dev.dependencies]
 jupyter = "^1.0.0"
+
+[tool.black]
+line-length = 88
 
 [build-system]
 requires = ["poetry-core"]
