--- a/pyproject.toml
+++ b/pyproject.toml
@@ -114,6 +114,7 @@ pyqt6 = "^6.5.1"
 tabulate = "^0.9.0"
 jupyterlab = "^4.0.3"
 pre-commit = "^3.3.3"
+polars = "^0.18.8"
 
 [tool.poetry.group.dev.dependencies]
 jupyter = "^1.0.0"
