--- a/pyproject.toml
+++ b/pyproject.toml
@@ -115,6 +115,7 @@ tabulate = "^0.9.0"
 jupyterlab = "^4.0.3"
 pre-commit = "^3.3.3"
 polars = "^0.18.8"
+scikit-learn = "^1.3.0"
 
 [tool.poetry.group.dev.dependencies]
 jupyter = "^1.0.0"
