--- a/.gitignore
+++ b/.gitignore
@@ -174,31 +174,5 @@ data/*
 build/*
 *.egg-info/
 bin/*
-tests/test_data/125.D/acq.macaml
-tests/test_data/125.D/acq.txt
-tests/test_data/125.D/ACQRES.REG
-tests/test_data/125.D/CSlbk.ini
-tests/test_data/125.D/DAD1.UV
-tests/test_data/125.D/DAD1A.ch
-tests/test_data/125.D/DAD1B.ch
-tests/test_data/125.D/LCDIAG.REG
-tests/test_data/125.D/Limsinf.xml
-tests/test_data/125.D/SAMPLE.XML
-tests/test_data/125.D/SAMPLE.XML.bak
-tests/test_data/125.D/sequence.acam_
-src/wine_analysis_hplc_uv/chemstation/1. chemstationprocessor
-src/wine_analysis_hplc_uv/library_eda/.jupyter/desktop-workspaces/default-37a8.jupyterlab-workspace
-/Users/jonathan/mres_thesis/wine_analysis_hplc_uv/src/wine_analysis_hplc_uv/library_eda/lib_eda/lib_eda_pub_organised_by_anal_not_detect_files/libs/bootstrap/*
+tests/test_data/*
 wine_analysis_hplc_uv_2.code-workspace
-src/wine_analysis_hplc_uv/library_eda/df.xlsx
-src/wine_analysis_hplc_uv/library_eda/lib_eda/lib_eda_files/libs/bootstrap/bootstrap.min.js
-src/wine_analysis_hplc_uv/library_eda/lib_eda/lib_eda_files/libs/clipboard/clipboard.min.js
-src/wine_analysis_hplc_uv/library_eda/lib_eda/lib_eda_files/libs/quarto-html/anchor.min.js
-src/wine_analysis_hplc_uv/library_eda/lib_eda/lib_eda_files/libs/quarto-html/popper.min.js
-src/wine_analysis_hplc_uv/library_eda/lib_eda/lib_eda_files/libs/quarto-html/quarto-syntax-highlighting.css
-src/wine_analysis_hplc_uv/library_eda/lib_eda/lib_eda_files/libs/quarto-html/quarto.js
-src/wine_analysis_hplc_uv/library_eda/lib_eda/lib_eda_files/libs/quarto-html/tippy.css
-src/wine_analysis_hplc_uv/library_eda/lib_eda/lib_eda_files/libs/quarto-html/tippy.umd.min.js
-src/wine_analysis_hplc_uv/library_eda/lib_eda/lib_eda_files/libs/bootstrap/bootstrap-icons.woff
-src/wine_analysis_hplc_uv/library_eda/lib_eda/lib_eda_files/libs/bootstrap/bootstrap-icons.css
-src/wine_analysis_hplc_uv/library_eda/lib_eda/lib_eda_files/libs/bootstrap/bootstrap.min.css
