--- a/pyproject.toml
+++ b/pyproject.toml
@@ -123,6 +123,10 @@ jupyter = "^1.0.0"
 [tool.black]
 line-length = 88
 
+[tool.pytest.ini_options]
+log_cli = true
+log_cli_level = "INFO"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
