big one, build_library test has been written, pipeline had some overhauls to how db connections and dataframes are handled. Logging added. Primary change is that the processor and cleaner classes dont work on their internal df, but an externally provided one which creates the df. makes for easier testing.
Former-commit-id: 6d4ab2fcd023ed87066fcca19eef3894853b01ba
Former-commit-id: be711a960b2e3461b1c0381b23194d0977cd945a

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -126,6 +126,8 @@ line-length = 88
 [tool.pytest.ini_options]
 log_cli = true
 log_cli_level = "DEBUG"
+log_format = "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
+log_date_format = "%Y-%m-%d %H:%M:%S"
 
 [build-system]
 requires = ["poetry-core"]
