--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,6 @@ contourpy = "1.0.7"
 cycler = "0.11.0"
 decorator = "5.1.1"
 docopt = "0.6.2"
-dtw = "1.4.0"
 duckdb = "0.8.0"
 entrypoints = "0.4"
 fonttools = "4.39.4"
@@ -117,6 +116,8 @@ pre-commit = "^3.3.3"
 polars = "^0.18.8"
 scikit-learn = "^1.3.0"
 ipympl = "^0.9.3"
+pandera = "^0.16.1"
+dtw-python = "^1.3.0"
 
 [tool.poetry.group.dev.dependencies]
 jupyter = "^1.0.0"
