--- a/pyproject.toml
+++ b/pyproject.toml
@@ -118,6 +118,9 @@ scikit-learn = "^1.3.0"
 ipympl = "^0.9.3"
 pandera = "^0.16.1"
 dtw-python = "^1.3.0"
+pandas-datareader = "^0.10.0"
+pyperclip = "^1.8.2"
+random-word = "^1.0.11"
 
 [tool.poetry.group.dev.dependencies]
 jupyter = "^1.0.0"
