development of pipeline and EDA notebooks covering preprocessing / thesis chapter
Former-commit-id: e9b4ddd14205670b2c6627a86b89e8c8e97f14f8
Former-commit-id: def1d321948e97886cd9e04ef155601534759163

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -121,6 +121,8 @@ dtw-python = "^1.3.0"
 pandas-datareader = "^0.10.0"
 pyperclip = "^1.8.2"
 random-word = "^1.0.11"
+panel = "^1.2.2"
+jupyter-bokeh = "^3.0.7"
 
 [tool.poetry.group.dev.dependencies]
 jupyter = "^1.0.0"
