--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,6 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = ">=3.11,<3.12"
-scipy = "1.10.1"
 altair = "4.2.2"
 attrs = "23.1.0"
 beautifulsoup4 = "4.12.2"
@@ -123,6 +122,11 @@ pyperclip = "^1.8.2"
 random-word = "^1.0.11"
 panel = "^1.2.2"
 jupyter-bokeh = "^3.0.7"
+nbstripout = "^0.6.1"
+scipy = "^1.11.2"
+dtwparallel = "^0.9.39"
+dtwalign = "^0.1.1"
+xgboost = "^2.0.0"
 
 [tool.poetry.group.dev.dependencies]
 jupyter = "^1.0.0"
