add patchworklib and associated dependencies
Former-commit-id: a932c35b4f9ed38100261fa5999b9e132db3a0b2
Former-commit-id: f841e404839076f647d26264d07275658ee4c714

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -127,6 +127,8 @@ scipy = "^1.11.2"
 dtwparallel = "^0.9.39"
 dtwalign = "^0.1.1"
 xgboost = "^2.0.0"
+patchworklib = "^0.6.2"
+plotnine = "^0.12.3"
 
 [tool.poetry.group.dev.dependencies]
 jupyter = "^1.0.0"
