--- a/pyproject.toml
+++ b/pyproject.toml
@@ -104,7 +104,7 @@ jupyter = "^1.0.0"
 seaborn = "^0.12.2"
 kaleido = "0.2.1"
 xhtml2pdf = "^0.2.11"
-pdf-reports = "^0.3.4"
+pdf-reports = "^0.3.4
 jupyter-contrib-nbextensions = "^0.7.0"
 pyppeteer = "^1.0.2"
 nbconvert = {extras = ["qtpdf"], version = "^7.6.0"}
