--- a/.gitignore
+++ b/.gitignore
@@ -180,3 +180,4 @@ wahc.duckdb
 wahu.duckdb
 src/wine_analysis_hplc_uv/notebooks/rw_cup_450_processed.parquet
 notebooks/My Library.bib
+.Rproj.user
