--- a/pyproject.toml
+++ b/pyproject.toml
@@ -104,7 +104,7 @@ jupyter = "^1.0.0"
 seaborn = "^0.12.2"
 kaleido = "0.2.1"
 xhtml2pdf = "^0.2.11"
-pdf-reports = "^0.3.4
+pdf-reports = "^0.3.4"
 jupyter-contrib-nbextensions = "^0.7.0"
 pyppeteer = "^1.0.2"
 nbconvert = {extras = ["qtpdf"], version = "^7.6.0"}
@@ -129,6 +129,9 @@ dtwalign = "^0.1.1"
 xgboost = "^2.0.0"
 patchworklib = "^0.6.2"
 plotnine = "^0.12.3"
+jupysql = "^0.10.2"
+pyampd = "^0.0.1"
+octavvs = {git = "https://github.com/jonathanstathakis/octavvs.git", develop = true}
 
 [tool.poetry.group.dev.dependencies]
 jupyter = "^1.0.0"
