rename `process_frame` to `signal_preprocess`,  removed `oversample` from `transform_dataset`, replaced a single fit classification report of the best estimator with `cross_validate` with scoring, removed the iteration of models in `run_models` with the `cross_validate` mentioned above, added SMOTE to the `xgbpipeline`, added notes about GridSearchCV, implementation of cross_validate that includes returning the scores as a df and the best estimator selected as the estimator with the highest average of the scores, added encode_y as a class instance object for later use alongside the split versions. Added notes on data leakage from SMOTE, and multiclass scores

--- a/.gitignore
+++ b/.gitignore
@@ -181,3 +181,6 @@ wahu.duckdb
 src/wine_analysis_hplc_uv/notebooks/rw_cup_450_processed.parquet
 notebooks/My Library.bib
 .Rproj.user
+*.drawio
+*.parquet
+src/wine_analysis_hplc_uv/notebooks/xgboost_modeling/.$ml_flowchart.drawio.dtmp
