--- a/pyproject.toml
+++ b/pyproject.toml
@@ -134,6 +134,7 @@ pyampd = "^0.0.1"
 octavvs = {git = "https://github.com/jonathanstathakis/octavvs.git", develop = true}
 graphviz = "^0.20.1"
 imbalanced-learn = "^0.11.0"
+bioinfokit = "^2.1.3"
 
 [tool.poetry.group.dev.dependencies]
 jupyter = "^1.0.0"
