--- a/pyproject.toml
+++ b/pyproject.toml
@@ -135,6 +135,8 @@ octavvs = {git = "https://github.com/jonathanstathakis/octavvs.git", develop = t
 graphviz = "^0.20.1"
 imbalanced-learn = "^0.11.0"
 bioinfokit = "^2.1.3"
+termcolor = "^2.3.0"
+hplc-py = {git = "https://github.com/jonathanstathakis/hplc-py.git"}
 
 [tool.poetry.group.dev.dependencies]
 jupyter = "^1.0.0"
