--- a/.gitignore
+++ b/.gitignore
@@ -185,3 +185,5 @@ notebooks/My Library.bib
 *.parquet
 src/wine_analysis_hplc_uv/notebooks/xgboost_modeling/.$ml_flowchart.drawio.dtmp
 My Library.bib
+*.csv
+*.pq
