--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["OctaneOolong <62565951+OctaneOolong@users.noreply.github.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = ">=3.11,<3.12"
+python = ">=3.12.2, <4.0"
 altair = "4.2.2"
 attrs = "23.1.0"
 beautifulsoup4 = "4.12.2"
@@ -42,21 +42,19 @@ iniconfig = "2.0.0"
 jinja2 = "3.1.2"
 jsonschema = "4.17.3"
 kiwisolver = "1.4.4"
-levenshtein = "0.21.0"
-lxml = "4.9.2"
+lxml = "5.2.2"
 markdown-it-py = "2.2.0"
 markupsafe = "2.1.2"
 matplotlib = "3.7.1"
 mdurl = "0.1.2"
-numpy = "1.24.3"
+numpy = "1.26.4"
 oauthlib = "3.2.2"
 packaging = "23.1"
-pandas = "2.0.3"
+pandas = "2.2.2"
 pillow = "9.5.0"
 pipreqs = "0.4.13"
 pluggy = "1.0.0"
 protobuf = "3.20.3"
-pyarrow = "12.0.0"
 pyasn1 = "0.5.0"
 pyasn1-modules = "0.3.0"
 pybaselines = "1.0.0"
@@ -67,10 +65,8 @@ pyparsing = "3.0.9"
 pyproject-hooks = "1.0.0"
 pyrsistent = "0.19.3"
 python-dateutil = "2.8.2"
-python-levenshtein = "0.21.0"
 python-lzf = "0.2.4"
 pytz = "2023.3"
-rapidfuzz = "3.0.0"
 requests = "2.31.0"
 requests-oauthlib = "1.3.1"
 rich = "13.3.5"
@@ -91,13 +87,10 @@ urllib3 = "1.26.16"
 validators = "0.20.0"
 yarg = "0.1.9"
 zipp = "3.15.0"
-gspread = "^5.9.0"
-plotly = "^5.15.0"
-mydevtools = {path = "/Users/jonathan/mycode/python_code/mydevtools", develop = true}
-rainbow-api-fork = {path = "/Users/jonathan/mycode/python_code/rainbow", develop = true}
+gspread = "^5.12.4"
 directory-tree = "^0.0.3.1"
-pytest = "^7.4.0"
-sqlalchemy = "^2.0.17"
+pytest = "^7.4.4"
+sqlalchemy = "^2.0.30"
 duckdb-engine = "^0.9.0"
 openpyxl = "^3.1.2"
 jupyter = "^1.0.0"
@@ -107,26 +100,24 @@ xhtml2pdf = "^0.2.11"
 pdf-reports = "^0.3.4"
 jupyter-contrib-nbextensions = "^0.7.0"
 pyppeteer = "^1.0.2"
-nbconvert = {extras = ["qtpdf"], version = "^7.6.0"}
-pyqt6 = "^6.5.1"
+nbconvert = {extras = ["qtpdf"], version = "^7.16.4"}
+pyqt6 = "^6.7.0"
 tabulate = "^0.9.0"
-jupyterlab = "^4.0.3"
-pre-commit = "^3.3.3"
+pre-commit = "^3.7.1"
 polars = "^0.18.8"
-scikit-learn = "^1.3.0"
+scikit-learn = "^1.4.2"
 ipympl = "^0.9.3"
 pandera = "^0.16.1"
-dtw-python = "^1.3.0"
+dtw-python = "^1.4.4"
 pandas-datareader = "^0.10.0"
 pyperclip = "^1.8.2"
 random-word = "^1.0.11"
-panel = "^1.2.2"
 jupyter-bokeh = "^3.0.7"
 nbstripout = "^0.6.1"
-scipy = "^1.11.2"
+scipy = "^1.13.0"
 dtwparallel = "^0.9.39"
 dtwalign = "^0.1.1"
-xgboost = "^2.0.0"
+xgboost = "^2.0.3"
 patchworklib = "^0.6.2"
 plotnine = "^0.12.3"
 jupysql = "^0.10.2"
@@ -134,14 +125,18 @@ pyampd = "^0.0.1"
 graphviz = "^0.20.1"
 imbalanced-learn = "^0.11.0"
 bioinfokit = "^2.1.3"
-termcolor = "^2.3.0"
+termcolor = "^2.4.0"
 ipython = "^8.24.0"
 deprecated = "^1.2.14"
+rapidfuzz = "^3.9.1"
+rainbow-api = {git = "https://github.com/jonathanstathakis/rainbow.git"}
+mydevtools = {git = "https://github.com/jonathanstathakis/mydevtools.git"}
+python-levenshtein = "^0.25.1"
 
 [tool.poetry.group.dev.dependencies]
 jupyter = "^1.0.0"
 
-[tool.black]
+[tool.ruff]
 line-length = 88
 
 [tool.pytest.ini_options]
