finishing off the time axis cleaning, conversion to quarto, further notes organisation, setting quarto project options

--- a/.gitignore
+++ b/.gitignore
@@ -189,52 +189,6 @@ My Library.bib
 *.pq
 *.wal
 
-/.quarto/
-src/wine_analysis_hplc_uv/notes/lib_eda/sample_standardisation/characterising_and_normalizing_time_axis/measuring_sampling_frequency/measuring_sampling_frequency_sample_154_files/libs/bootstrap/bootstrap-icons.css
-src/wine_analysis_hplc_uv/notes/lib_eda/sample_standardisation/characterising_and_normalizing_time_axis/measuring_sampling_frequency/measuring_sampling_frequency_sample_154_files/libs/bootstrap/bootstrap-icons.woff
-src/wine_analysis_hplc_uv/notes/lib_eda/sample_standardisation/characterising_and_normalizing_time_axis/measuring_sampling_frequency/measuring_sampling_frequency_sample_154_files/libs/bootstrap/bootstrap.min.css
-src/wine_analysis_hplc_uv/notes/lib_eda/sample_standardisation/characterising_and_normalizing_time_axis/measuring_sampling_frequency/measuring_sampling_frequency_sample_154_files/libs/bootstrap/bootstrap.min.js
-src/wine_analysis_hplc_uv/notes/lib_eda/sample_standardisation/characterising_and_normalizing_time_axis/measuring_sampling_frequency/measuring_sampling_frequency_sample_154_files/libs/clipboard/clipboard.min.js
-src/wine_analysis_hplc_uv/notes/lib_eda/sample_standardisation/characterising_and_normalizing_time_axis/measuring_sampling_frequency/measuring_sampling_frequency_sample_154_files/libs/quarto-html/anchor.min.js
-src/wine_analysis_hplc_uv/notes/lib_eda/sample_standardisation/characterising_and_normalizing_time_axis/measuring_sampling_frequency/measuring_sampling_frequency_sample_154_files/libs/quarto-html/popper.min.js
-src/wine_analysis_hplc_uv/notes/lib_eda/sample_standardisation/characterising_and_normalizing_time_axis/measuring_sampling_frequency/measuring_sampling_frequency_sample_154_files/libs/quarto-html/quarto-syntax-highlighting.css
-src/wine_analysis_hplc_uv/notes/lib_eda/sample_standardisation/characterising_and_normalizing_time_axis/measuring_sampling_frequency/measuring_sampling_frequency_sample_154_files/libs/quarto-html/quarto.js
-src/wine_analysis_hplc_uv/notes/lib_eda/sample_standardisation/characterising_and_normalizing_time_axis/measuring_sampling_frequency/measuring_sampling_frequency_sample_154_files/libs/quarto-html/tippy.css
-src/wine_analysis_hplc_uv/notes/lib_eda/sample_standardisation/characterising_and_normalizing_time_axis/measuring_sampling_frequency/measuring_sampling_frequency_sample_154_files/libs/quarto-html/tippy.umd.min.js
-src/wine_analysis_hplc_uv/notes/lib_eda/sample_standardisation/characterising_and_normalizing_time_axis/measuring_sampling_frequency/measuring_sampling_frequency_sample_154.html
-src/wine_analysis_hplc_uv/notes/lib_eda/sample_standardisation/characterising_and_normalizing_time_axis/sample_154_inspection/sample_154_files/libs/bootstrap/bootstrap-icons.css
-src/wine_analysis_hplc_uv/notes/lib_eda/sample_standardisation/characterising_and_normalizing_time_axis/sample_154_inspection/sample_154_files/libs/bootstrap/bootstrap-icons.woff
-src/wine_analysis_hplc_uv/notes/lib_eda/sample_standardisation/characterising_and_normalizing_time_axis/sample_154_inspection/sample_154_files/libs/bootstrap/bootstrap.min.css
-src/wine_analysis_hplc_uv/notes/lib_eda/sample_standardisation/characterising_and_normalizing_time_axis/sample_154_inspection/sample_154_files/libs/bootstrap/bootstrap.min.js
-src/wine_analysis_hplc_uv/notes/lib_eda/sample_standardisation/characterising_and_normalizing_time_axis/sample_154_inspection/sample_154_files/libs/clipboard/clipboard.min.js
-src/wine_analysis_hplc_uv/notes/lib_eda/sample_standardisation/characterising_and_normalizing_time_axis/sample_154_inspection/sample_154_files/libs/quarto-html/anchor.min.js
-src/wine_analysis_hplc_uv/notes/lib_eda/sample_standardisation/characterising_and_normalizing_time_axis/sample_154_inspection/sample_154_files/libs/quarto-html/popper.min.js
-src/wine_analysis_hplc_uv/notes/lib_eda/sample_standardisation/characterising_and_normalizing_time_axis/sample_154_inspection/sample_154_files/libs/quarto-html/quarto-syntax-highlighting.css
-src/wine_analysis_hplc_uv/notes/lib_eda/sample_standardisation/characterising_and_normalizing_time_axis/sample_154_inspection/sample_154_files/libs/quarto-html/quarto.js
-src/wine_analysis_hplc_uv/notes/lib_eda/sample_standardisation/characterising_and_normalizing_time_axis/sample_154_inspection/sample_154_files/libs/quarto-html/tippy.css
-src/wine_analysis_hplc_uv/notes/lib_eda/sample_standardisation/characterising_and_normalizing_time_axis/sample_154_inspection/sample_154_files/libs/quarto-html/tippy.umd.min.js
-src/wine_analysis_hplc_uv/notes/lib_eda/sample_standardisation/characterising_and_normalizing_time_axis/sample_154_inspection/sample_154.html
-src/wine_analysis_hplc_uv/notes/lib_eda/sample_standardisation/characterising_and_normalizing_time_axis/time_offset/testing_time_ordering_files/libs/bootstrap/bootstrap-icons.css
-src/wine_analysis_hplc_uv/notes/lib_eda/sample_standardisation/characterising_and_normalizing_time_axis/time_offset/testing_time_ordering_files/libs/bootstrap/bootstrap-icons.woff
-src/wine_analysis_hplc_uv/notes/lib_eda/sample_standardisation/characterising_and_normalizing_time_axis/time_offset/testing_time_ordering_files/libs/bootstrap/bootstrap.min.css
-src/wine_analysis_hplc_uv/notes/lib_eda/sample_standardisation/characterising_and_normalizing_time_axis/time_offset/testing_time_ordering_files/libs/bootstrap/bootstrap.min.js
-src/wine_analysis_hplc_uv/notes/lib_eda/sample_standardisation/characterising_and_normalizing_time_axis/time_offset/testing_time_ordering_files/libs/clipboard/clipboard.min.js
-src/wine_analysis_hplc_uv/notes/lib_eda/sample_standardisation/characterising_and_normalizing_time_axis/time_offset/testing_time_ordering_files/libs/quarto-html/anchor.min.js
-src/wine_analysis_hplc_uv/notes/lib_eda/sample_standardisation/characterising_and_normalizing_time_axis/time_offset/testing_time_ordering_files/libs/quarto-html/popper.min.js
-src/wine_analysis_hplc_uv/notes/lib_eda/sample_standardisation/characterising_and_normalizing_time_axis/time_offset/testing_time_ordering_files/libs/quarto-html/quarto-syntax-highlighting.css
-src/wine_analysis_hplc_uv/notes/lib_eda/sample_standardisation/characterising_and_normalizing_time_axis/time_offset/testing_time_ordering_files/libs/quarto-html/quarto.js
-src/wine_analysis_hplc_uv/notes/lib_eda/sample_standardisation/characterising_and_normalizing_time_axis/time_offset/testing_time_ordering_files/libs/quarto-html/tippy.css
-src/wine_analysis_hplc_uv/notes/lib_eda/sample_standardisation/characterising_and_normalizing_time_axis/time_offset/testing_time_ordering_files/libs/quarto-html/tippy.umd.min.js
-src/wine_analysis_hplc_uv/notes/lib_eda/sample_standardisation/characterising_and_normalizing_time_axis/time_offset/time_offset_files/libs/bootstrap/bootstrap-icons.css
-src/wine_analysis_hplc_uv/notes/lib_eda/sample_standardisation/characterising_and_normalizing_time_axis/time_offset/time_offset_files/libs/bootstrap/bootstrap-icons.woff
-src/wine_analysis_hplc_uv/notes/lib_eda/sample_standardisation/characterising_and_normalizing_time_axis/time_offset/time_offset_files/libs/bootstrap/bootstrap.min.css
-src/wine_analysis_hplc_uv/notes/lib_eda/sample_standardisation/characterising_and_normalizing_time_axis/time_offset/time_offset_files/libs/bootstrap/bootstrap.min.js
-src/wine_analysis_hplc_uv/notes/lib_eda/sample_standardisation/characterising_and_normalizing_time_axis/time_offset/time_offset_files/libs/clipboard/clipboard.min.js
-src/wine_analysis_hplc_uv/notes/lib_eda/sample_standardisation/characterising_and_normalizing_time_axis/time_offset/time_offset_files/libs/quarto-html/anchor.min.js
-src/wine_analysis_hplc_uv/notes/lib_eda/sample_standardisation/characterising_and_normalizing_time_axis/time_offset/time_offset_files/libs/quarto-html/popper.min.js
-src/wine_analysis_hplc_uv/notes/lib_eda/sample_standardisation/characterising_and_normalizing_time_axis/time_offset/time_offset_files/libs/quarto-html/quarto-syntax-highlighting.css
-src/wine_analysis_hplc_uv/notes/lib_eda/sample_standardisation/characterising_and_normalizing_time_axis/time_offset/time_offset_files/libs/quarto-html/quarto.js
-src/wine_analysis_hplc_uv/notes/lib_eda/sample_standardisation/characterising_and_normalizing_time_axis/time_offset/time_offset_files/libs/quarto-html/tippy.css
-src/wine_analysis_hplc_uv/notes/lib_eda/sample_standardisation/characterising_and_normalizing_time_axis/time_offset/time_offset_files/libs/quarto-html/tippy.umd.min.js
-src/wine_analysis_hplc_uv/notes/lib_eda/sample_standardisation/characterising_and_normalizing_time_axis/time_offset/testing_time_ordering.html
-src/wine_analysis_hplc_uv/notes/lib_eda/sample_standardisation/characterising_and_normalizing_time_axis/time_offset/time_offset.html
+_output
+.quarto
+wines.db.tmp
