--- a/pyproject.toml
+++ b/pyproject.toml
@@ -135,6 +135,7 @@ ruff = "^0.4.5"
 quarto = "^0.1.0"
 jupyter = "^1.0.0"
 nbconvert = "^7.16.4"
+plotly = "^5.22.0"
 
 [tool.ruff]
 line-length = 88
