add notebook detailing selection of 'representative' shiraz samples, associated module and tests.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -136,6 +136,7 @@ quarto = "^0.1.0"
 jupyter = "^1.0.0"
 nbconvert = "^7.16.4"
 plotly = "^5.22.0"
+plotnine-prism = "^0.3.0"
 
 [tool.ruff]
 line-length = 88
